--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "webar.rocks.hand_demos",
+  "name": "ring.wrist.demo",
   "version": "1.0.0",
-  "description": "WebAR.rocks.hand demos in a modern environment",
+  "description": "Ring and wrist demo in AR enviornment",
   "main": "index.js",
-  "author": "Xavier Bourry",
+  "author": "Abdullah Bin Masood",
   "license": "",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --host localhost --config config/webpack.dev.js",
@@ -39,16 +39,13 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:WebAR-rocks/WebAR.rocks.hand"
-  },
   "dependencies": {
     "@react-three/fiber": "^7.0.20",
     "@react-three/postprocessing": "^2.0.3",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^5.2.0",
     "sass": "^1.62.1",
     "three": "^0.140.0"
